[package]
authors = ["Cole Lawrence <cole@colelawrence.com>"]
edition = "2018"
name = "layered-demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layered-amount = {version = "0.1.0"}
layered-nlp = {version = "0.1.0"}

[dev-dependencies]
insta = "1.7.1"

[patch.crates-io]
layered-nlp = {path = "../../story/layered-nlp"}
